--- a/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/Views/Account/Login.cshtml
@@ -52,7 +52,7 @@
             </div>
 
             <div class="text-right text-sm font-medium text-black">
-                <p><a href="" class="text-[#7A1515]" data-toggle="modal" data-target="#resetPasswordModal">Forgot Password?</a></p>
+                <p><a asp-action="ForgotPassword" class="text-[#7A1515]">Forgot Password?</a></p>
             </div>
 
             <div>
